--- a/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
+++ b/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MyStyle">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -27,15 +27,17 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
+        <activity android:name=".MainActivity"
+            android:label="道路避讓及時警示系統">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="Map">
         </activity>
     </application>
 
