--- a/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
+++ b/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
@@ -27,8 +27,10 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <activity android:name=".MainActivity"
-            android:label="道路避讓及時警示系統">
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,8 +39,12 @@
         </activity>
         <activity
             android:name=".MapsActivity"
-            android:label="Map">
-        </activity>
+            android:theme="@style/MyStyle"
+            android:label="Map"></activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="Setting"></activity>
+
     </application>
 
 </manifest>
