--- a/Google_API_O_I_O_I/app/build.gradle
+++ b/Google_API_O_I_O_I/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.google.android.gms:play-services:9.6.1'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile "org.java-websocket:Java-WebSocket:1.3.4"
     testCompile 'junit:junit:4.12'
 }
