--- a/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
+++ b/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
@@ -31,9 +31,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <activity
-            android:name=".MainActivity"
+            android:name=".ChooseClientActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".MapsActivity"
             android:theme="@style/MyStyle"
