--- a/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
+++ b/Google_API_O_I_O_I/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
         <activity
             android:name=".ChooseClientActivity"
             android:label="@string/app_name">
@@ -42,15 +43,19 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".MapsActivity"
-            android:theme="@style/MyStyle"
-            android:label="Map"></activity>
+            android:label="Map"
+            android:theme="@style/MyStyle" />
         <activity
             android:name=".SettingActivity"
-            android:label="Setting"></activity>
+            android:label="Setting" />
 
+        <service
+            android:name=".Servicetest"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
